# byrbbs_wechat_backend

./: Cargo.toml  config.toml.example
src/: config.rs  main.rs
src/service/: mod.rs  token.rs
