[package]
name = "byrbbs_wechat_backend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version = "3", features = ["rustls"]}
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
log = "0.4"
env_logger = "0.8"
anyhow = "1.0"
once_cell = "1.8.0"